Fix game canvas not centered in window

--- a/static/style.css
+++ b/static/style.css
@@ -25,3 +25,13 @@ main {
     flex-direction: column;
     align-items: center;
 }
+
+.canvas-wrapper {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
